--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 </h1>
         </div>
             <h2>Pms, Like &amp; The code World&nbsp;</h2>
-            <p><a href="https://pengmengshan.github.io/" target="_blank">Blog</a></p>
+            <p><a href="http://www.pengmengshan.cn/bolg/" target="_blank">Blog</a></p>
             <p><a href="https://github.com/PengMengShan" target="_blank">Github</a></p>
-            <p><a href=" https://pengmengshan.github.io/Game/" target="_blank">Game</a></p>
-            <p><a href="https://pengmengshan.github.io/pms/" target="_blank">个人简历</a></p>
-            <p><a href="https://pengmengshan.github.io/React-Dva--Blog-project/" target="_blank">个人项目</a></p>
+            <p><a href="http://www.pengmengshan.cn/Game/" target="_blank">Game</a></p>
+            <p><a href="http://www.pengmengshan.cn/pms/" target="_blank">个人简历</a></p>
+            <p><a href="http://www.pengmengshan.cn/React-Dva--Blog-project/" target="_blank">个人项目</a></p>
             <p><a href="http://www.cnblogs.com/pms01/" target="_blank">博客园</a></p>
         </div>
         <canvas></canvas>
