--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </h1>
         </div>
             <h2>Pms, Like &amp; The code World&nbsp;</h2>
-            <p><a href="http://www.pengmengshan.cn/bolg/" target="_blank">Blog</a></p>
+            <p><a href="http://www.91pms.top/" target="_blank">Blog</a></p>
             <p><a href="https://github.com/PengMengShan" target="_blank">Github</a></p>
             <p><a href="http://www.pengmengshan.cn/Game/" target="_blank">Game</a></p>
             <p><a href="http://www.pengmengshan.cn/pms/" target="_blank">个人简历</a></p>
