--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p><a href="https://github.com/PengMengShan" target="_blank">Github</a></p>
             <p><a href="http://www.pengmengshan.cn/Game/" target="_blank">Game</a></p>
             <p><a href="http://www.pengmengshan.cn/pms/" target="_blank">个人简历</a></p>
-            <p><a href="http://www.pengmengshan.cn/React-Dva--Blog-project/" target="_blank">个人项目</a></p>
+            <p><a href="http://www.pengmengshan.cn/React--project/" target="_blank">个人项目</a></p>
             <p><a href="http://www.cnblogs.com/pms01/" target="_blank">博客园</a></p>
         </div>
         <canvas></canvas>
