--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p><a href="http://www.cnblogs.com/pms01/" target="_blank">博客园</a></p>
         </div>
         <canvas></canvas>
-       <audio src="img/Music.mp3" autoplay loop></audio>
+       <audio src="img/Music.mp3" autoplay></audio>
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <script>
         //******logo文字进出场*************************
