--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span><b>你</b></span>
                 </h1>
         </div>
-            <h2>Pms, Like &amp; The code World&nbsp;</h2>
+            <h2>PMS, Like &amp; The Code World&nbsp;</h2>
             <p><a href="http://www.91pms.top/" target="_blank">Blog</a></p>
             <p><a href="https://github.com/PengMengShan" target="_blank">Github</a></p>
             <p><a href="http://www.pengmengshan.cn/Game/" target="_blank">Game</a></p>
