--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" href="img/favicon.ico" />
 </head>
 <body>
-     <audio src="./img/Music.mp3" autoplay></audio>
         <div id="pms">
             <div class="logo">
                 <h1>
@@ -30,6 +29,7 @@
             <p><a href="http://www.cnblogs.com/pms01/" target="_blank">博客园</a></p>
         </div>
         <canvas></canvas>
+     <audio src="img/Music.mp3" autoplay loop></audio>
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <script>
         //******logo文字进出场*************************
