--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <audio src="img/Music.mp3" autoplay loop></audio>
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
     <script>
-        //******logo文字进出场*************************
+        //******文字进出场*************************
        setTimeout(function(){
         $("b").each(function(i){
             $(this).css("transition-delay",i*0.2+"s");
