--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <h2>PMS, Like &amp; The Code World&nbsp;</h2>
             <p><a href="http://www.91pms.top/" target="_blank">Blog</a></p>
             <p><a href="https://github.com/PengMengShan" target="_blank">Github</a></p>
-            <p><a href="http://www.pengmengshan.cn/Game/" target="_blank">Game</a></p>
-            <p><a href="http://www.pengmengshan.cn/pms/" target="_blank">个人简历</a></p>
-            <p><a href="http://www.pengmengshan.cn/Nav-page/" target="_blank">个人项目</a></p>
+            <p><a href="http://www.pengmengshan.top/Game/" target="_blank">Game</a></p>
+            <p><a href="http://www.pengmengshan.top/pms/" target="_blank">个人简历</a></p>
+            <p><a href="http://www.pengmengshan.top/Nav-page/" target="_blank">个人项目</a></p>
             <p><a href="http://www.cnblogs.com/pms01/" target="_blank">博客园</a></p>
         </div>
         <canvas></canvas>
